done for TiToggle

--- a/src/lib/input/toggle/ti-toggle.scss
+++ b/src/lib/input/toggle/ti-toggle.scss
@@ -24,7 +24,7 @@
     border: 1px solid var(--ti-color-border-dark);
     b {
       background-color: var(--ti-color-bar);
-      border: 1px solid var(--ti-color-border-thin);
+      border: 1px solid var(--ti-color-border-dark);
     }
   }
   //-----------------------------------------
