--- a/src/lib/shelf/grid-fields/style/gf-it-field.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-field.scss
@@ -1,11 +1,48 @@
-.part-field {
+.ti-grid-fiels-item.part-field {
   @include colorized;
   display: grid;
+  grid-column-gap: 0.3em;
 
+  //-------------------------------------------------------------
   > .field-part {
-    .as-tip {
+    &.as-title {
+      line-height: var(--ti-measure-box-height);
+      > .field-title-snippet {
+        @include flex-align-nowrap;
+        > * {
+          flex: 1 1 auto;
+        }
+        > .ti-icon {
+          flex: 0 0 auto;
+          opacity: 0.6;
+          transition: 300ms;
+          cursor: pointer;
+          &.at-prefix {
+            margin-right: 0.2em;
+          }
+          &.at-suffix {
+            margin-left: 0.2em;
+          }
+          &:hover {
+            opacity: 1;
+            color: var(--ti-color-primary);
+            transform: scale(1.5) translateY(-2px);
+          }
+        }
+        > .as-snippet-text {
+          flex: 1 1 auto;
+          text-align: right;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+    }
+    &.as-tip {
       opacity: 0.6;
       font-size: 0.8em;
     }
   }
+  //-------------------------------------------------------------
+
+  //-------------------------------------------------------------
 }
