--- a/src/lib/shelf/grid-fields/style/gf-it-field.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-field.scss
@@ -2,46 +2,72 @@
   @include colorized;
   display: grid;
   grid-column-gap: 0.3em;
-
+  //-------------------------------------------------------------
+  @mixin __data_align($align, $jc) {
+    &[data-align='#{$align}'] {
+      justify-content: $jc;
+    }
+  }
   //-------------------------------------------------------------
   > .field-part {
+    &[data-align] {
+      @include flex-align($ai: flex-start);
+    }
+    @include __data_align(left, flex-start);
+    @include __data_align(center, center);
+    @include __data_align(right, flex-end);
+    @include __data_align(justify, space-between);
+    @include __data_align(start, flex-start);
+    @include __data_align(end, flex-end);
+    &[data-align='start'] {
+      text-align: start;
+    }
+    &[data-align='end'] {
+      text-align: end;
+    }
+    //-----------------------------------------------------------
     &.as-title {
       line-height: var(--ti-measure-box-height);
-      > .field-title-snippet {
-        @include flex-align-nowrap;
-        > * {
-          flex: 1 1 auto;
+      flex-wrap: nowrap;
+      > .ti-icon {
+        flex: 0 0 auto;
+        opacity: 0.6;
+        transition: 300ms;
+        height: var(--ti-measure-box-height);
+        cursor: pointer;
+        &.at-prefix {
+          margin-right: 0.2em;
         }
-        > .ti-icon {
-          flex: 0 0 auto;
-          opacity: 0.6;
-          transition: 300ms;
-          cursor: pointer;
-          &.at-prefix {
-            margin-right: 0.2em;
-          }
-          &.at-suffix {
-            margin-left: 0.2em;
-          }
-          &:hover {
-            opacity: 1;
-            color: var(--ti-color-primary);
-            transform: scale(1.5) translateY(-2px);
-          }
+        &.at-suffix {
+          margin-left: 0.2em;
         }
-        > .as-snippet-text {
-          flex: 1 1 auto;
-          text-align: right;
-          overflow: hidden;
-          text-overflow: ellipsis;
+        &:hover {
+          opacity: 1;
+          color: var(--ti-color-primary);
+          transform: scale(1.5) translateY(-2px);
         }
       }
-    }
+      > .as-snippet-text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    } // .as-title
+    //-----------------------------------------------------------
     &.as-tip {
       opacity: 0.6;
       font-size: 0.8em;
     }
+    //-----------------------------------------------------------
+    &.customized-com {
+      &.as-title {
+        > * {
+          flex: 1 1 auto;
+        }
+      }
+    }
+    //-----------------------------------------------------------
   }
+
   //-------------------------------------------------------------
 
   //-------------------------------------------------------------
