--- a/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
+++ b/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
@@ -1,11 +1,13 @@
 .ti-grid-fields {
+  width: 100%;
+  height: 100%;
   overflow: auto;
   > .part-title {
     display: block;
     text-align: center;
     font-size: 1.4em;
     padding: 0.6em 0;
-    border-bottom: 1px solid var(--ti-color-border-weak);
+    border-bottom: 1px solid var(--ti-color-border-shallow);
   }
   > .part-body {
     display: grid;
@@ -16,6 +18,18 @@
     font-size: 0.8em;
     padding: 1em;
   }
+  //-------------------------------------------------------------
+  &.title-sticky {
+    position: relative;
+    > .part-title {
+      position: sticky;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: $z-above;
+      background-color: var(--ti-color-card);
+    }
+  }
 
   //-------------------------------------------------------------
   @mixin __aspect_fontsz($sz) {
@@ -23,22 +37,25 @@
       font-size: var(--ti-fontsz-#{$sz});
     }
   }
-  @include __aspect_fontsz('t');
-  @include __aspect_fontsz('s');
-  @include __aspect_fontsz('m');
-  @include __aspect_fontsz('b');
-  @include __aspect_fontsz('h');
+  @include __aspect_fontsz("t");
+  @include __aspect_fontsz("s");
+  @include __aspect_fontsz("m");
+  @include __aspect_fontsz("b");
+  @include __aspect_fontsz("h");
 
   //-------------------------------------------------------------
   @mixin __aspect_body_gap($sz) {
     &.body-gap-#{$sz} > .part-body {
       gap: var(--ti-gap-#{$sz});
       padding: var(--ti-gap-#{$sz});
+      .ti-grid-fiels-item.part-field {
+        gap: var(--ti-gap-#{$sz});
+      }
     }
   }
-  @include __aspect_body_gap('t');
-  @include __aspect_body_gap('s');
-  @include __aspect_body_gap('m');
-  @include __aspect_body_gap('b');
-  @include __aspect_body_gap('h');
+  @include __aspect_body_gap("t");
+  @include __aspect_body_gap("s");
+  @include __aspect_body_gap("m");
+  @include __aspect_body_gap("b");
+  @include __aspect_body_gap("h");
 }
