--- a/src/lib/tile/label/ti-label.scss
+++ b/src/lib/tile/label/ti-label.scss
@@ -1,9 +1,14 @@
 div.ti-label {
   @include colorized;
   min-height: var(--ti-measure-box-height);
-
+  
   &.nil-value {
     opacity: 0.62;
     font-style: italic;
+  }
+
+  > .part-value {
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
