done for form tabs

--- a/src/lib/shelf/grid-fields/style/gf-it-field.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-field.scss
@@ -67,6 +67,7 @@
         }
       }
       > .as-snippet-text {
+        white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
       }
