--- a/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
+++ b/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  //-------------------------------------------------------------
   > .part-title {
     display: block;
     text-align: center;
@@ -9,10 +10,14 @@
     padding: 0.6em 0;
     border-bottom: 1px solid var(--ti-color-border-shallow);
   }
+  //-------------------------------------------------------------
   > .part-body {
     display: grid;
     grid-auto-rows: auto;
+    justify-content: stretch;
+    align-content: start;
   }
+  //-------------------------------------------------------------
   > .part-foot {
     display: block;
     font-size: 0.8em;
@@ -30,36 +35,66 @@
       background-color: var(--ti-color-card);
     }
   }
-
+  //-------------------------------------------------------------
+  &.foot-sticky {
+    position: relative;
+    > .part-foot {
+      position: sticky;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: $z-above;
+      background-color: var(--ti-color-card);
+    }
+  }
+  //-------------------------------------------------------------
+  &.title-sticky {
+    position: relative;
+    > .part-title {
+      position: sticky;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: $z-above;
+      background-color: var(--ti-color-card);
+    }
+  }
+  //-------------------------------------------------------------
+  &.body-stretch {
+    @include flex-align-v-nowrap;
+    > .part-body {
+      flex: 1 1 auto;
+    }
+  }
   //-------------------------------------------------------------
   @mixin __aspect_fontsz($sz) {
     &.fsz-#{$sz} {
       font-size: var(--ti-fontsz-#{$sz});
     }
   }
-  @include __aspect_fontsz('t');
-  @include __aspect_fontsz('s');
-  @include __aspect_fontsz('m');
-  @include __aspect_fontsz('b');
-  @include __aspect_fontsz('h');
+  @include __aspect_fontsz("t");
+  @include __aspect_fontsz("s");
+  @include __aspect_fontsz("m");
+  @include __aspect_fontsz("b");
+  @include __aspect_fontsz("h");
 
   //-------------------------------------------------------------
   @mixin __aspect_body_gap($sz) {
     &.body-gap-#{$sz} > .part-body {
       gap: var(--ti-gap-#{$sz});
       padding: var(--ti-gap-#{$sz});
-      .ti-grid-fiels-item.part-field {
+      > .ti-grid-fiels-item.part-field {
         column-gap: var(--ti-gap-#{$sz});
       }
-      .ti-grid-fiels-item.part-group {
+      > .ti-grid-fiels-item.part-group {
         gap: var(--ti-gap-#{$sz});
         padding: var(--ti-gap-#{$sz});
       }
     }
   }
-  @include __aspect_body_gap('t');
-  @include __aspect_body_gap('s');
-  @include __aspect_body_gap('m');
-  @include __aspect_body_gap('b');
-  @include __aspect_body_gap('h');
+  @include __aspect_body_gap("t");
+  @include __aspect_body_gap("s");
+  @include __aspect_body_gap("m");
+  @include __aspect_body_gap("b");
+  @include __aspect_body_gap("h");
 }
