--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -75,7 +75,7 @@ a {
   color: var(--ti-color-link);
   text-decoration: none;
   &:hover {
-    color: var(--ti-color-link-hover);
+    //color: var(--ti-color-link-hover);
     text-decoration: underline;
   }
 }
