--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -18,6 +18,8 @@
   --ti-color-mask-weak: rgba(0, 0, 0, 0.2);
   /* 边框/线 */
   --ti-color-border-shallow: #444;
+  --ti-color-border-thin: #585858;
+  --ti-color-border-weak: #656565;
   --ti-color-border-dark: #888;
   --ti-color-link: #7dc2ff;
   --ti-color-link-hover: #ff0;
