--- a/src/lib/view/table/style/table-cell.scss
+++ b/src/lib/view/table/style/table-cell.scss
@@ -1,14 +1,15 @@
 .ti-table > main > .table-cell {
-  @include flex-align-nowrap($ai: stretch);
+  display: grid;
   @include colorized;
   background-color: var(--ti-color-card);
   //background-color: blue;
   &.is-checked {
     color: var(--ti-color-selected-r);
     background-color: var(--ti-color-selected);
-  }
-  > .ti-cell {
-    flex: 1 1 auto;
+    &.is-actived.has-actived-com {
+      color: var(--ti-color-box-f);
+      background-color: var(--ti-color-box);
+    }
   }
 
   //
