--- a/src/assets/style/_mixins.scss
+++ b/src/assets/style/_mixins.scss
@@ -12,7 +12,8 @@ $z-mask: 1000;
 $z-menu: 10000;
 $z-top: 999999;
 //-------------------------- adjust bar size
-$BARSZ: 5px;
+$BARSZ: 3px;
+$BARLINE: 1px;
 //-------------------------------------------------------------
 //
 //          尺度
