--- a/src/lib/shelf/layout/grid/style/grid-adjust-bar.scss
+++ b/src/lib/shelf/layout/grid/style/grid-adjust-bar.scss
@@ -25,13 +25,13 @@
     &::before {
       height: 100%;
       width: 0px;
-      border-left: 2px dashed var(--ti-color-primary);
+      border-left: $BARLINE dashed var(--ti-color-secondary);
     }
     &[bar-position="prev"] {
-      left: $BARSZ * -1;
+      left: $BARSZ * -2;
     }
     &[bar-position="next"] {
-      right: $BARSZ * -1;
+      right: $BARSZ * -2;
     }
   }
   &[bar-mode="row"] {
@@ -42,7 +42,7 @@
     &::before {
       width: 100%;
       height: 0px;
-      border-bottom: 2px dashed var(--ti-color-primary);
+      border-bottom: $BARLINE dashed var(--ti-color-secondary);
     }
     &[bar-position="prev"] {
       top: $BARSZ * -1;
