--- a/src/lib/input/box/ti-input-box.scss
+++ b/src/lib/input/box/ti-input-box.scss
@@ -38,6 +38,15 @@ div.ti-input-box {
 
 .ti-input-tip-wrapper {
   position: fixed;
-  z-index: $z-mask;
-  
+  z-index: $z-mask + 2;
+  display: grid;
+  padding: SZ(2) 0;
+  > .tip-con {
+    background-color: var(--ti-color-card);
+    border: 1px solid var(--ti-color-primary);
+    border-radius: var(--ti-measure-r-s);
+    box-shadow: -1px -1px var(--ti-color-light), 1px 1px var(--ti-color-dark),
+      4px 4px 12px var(--ti-color-mask-thin);
+    overflow: hidden;
+  }
 }
