--- a/src/lib/shelf/block/ti-block.scss
+++ b/src/lib/shelf/block/ti-block.scss
@@ -9,7 +9,7 @@
     padding: 1px;
     > .as-icon {
       @include flex-center;
-      padding-left:0.618em;
+      padding-left: 0.618em;
     }
     > .as-title {
       flex: 1 1 auto;
@@ -21,15 +21,20 @@
       display: grid;
       grid-template-columns: 1fr;
       grid-template-rows: 1fr;
-      > .bar-top-group {
-        > .bar-item[item-depth="0"] {
-          > .bar-item-head {
-            border-radius: 0;
-          }
-        }
-      }
+      padding: SZ(4);
+      // > .bar-top-group {
+      //   > .bar-item[item-depth="0"] {
+      //     > .bar-item-head {
+      //       border-radius: 0;
+      //     }
+      //   }
+      // }
     }
   } // > header
+
+  > main {
+    position: relative;
+  }
 }
 
 //-------------------------------------------------------------
