--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -32,23 +32,33 @@
   --ti-color-dark: #b8b8b8;
   /* 内容颜色 */
   --ti-color-primary: #2196f3;
+  --ti-color-primary-b: #258bdf;
   --ti-color-primary-r: #d0e7fc;
   --ti-color-secondary: #ff4081;
+  --ti-color-secondary-b: #f86999;
   --ti-color-secondary-r: #fff;
   --ti-color-success: #4caf50;
+  --ti-color-success-b: #56a358;
   --ti-color-success-r: #cfc;
   --ti-color-warn: #ff8800;
+  --ti-color-warn-b: #f8a03a;
   --ti-color-warn-r: #ffc;
   --ti-color-info: #2196f3;
+  --ti-color-info-b: #4fa7ee;
   --ti-color-info-r: #fff;
   --ti-color-error: #f44336;
+  --ti-color-error-b: #f16e64;
   --ti-color-error-r: #fcc;
   --ti-color-track: #888;
+  --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
   --ti-color-disable: #999;
+  --ti-color-disable-b: #adadad;
   --ti-color-disable-r: #ccc;
-  --ti-color-text: #080;
+  --ti-color-text: #008800;
+  --ti-color-text-b: #0f9c0f;
   --ti-color-text-r: #fff;
-  --ti-color-number: #08f;
+  --ti-color-number: #0088ff;
+  --ti-color-number-b: #2788dd;
   --ti-color-number-r: #fff;
 }
