--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -32,23 +32,33 @@
   --ti-color-dark: #000;
   /* 内容颜色 */
   --ti-color-primary: #58a6e6;
+  --ti-color-primary-b: #67a7db;
   --ti-color-primary-r: #ecf5fd;
   --ti-color-secondary: #ff78a5;
+  --ti-color-secondary-b: #e783a5;
   --ti-color-secondary-r: #fff;
   --ti-color-success: #4caf50;
+  --ti-color-success-b: #5aa55c;
   --ti-color-success-r: #cfc;
   --ti-color-warn: #ff8800;
+  --ti-color-warn-b: #ec8f23;
   --ti-color-warn-r: #ffc;
   --ti-color-info: #2196f3;
+  --ti-color-info-b: #3c9be9;
   --ti-color-info-r: #fff;
   --ti-color-error: #f44336;
+  --ti-color-error-b: #e9574d;
   --ti-color-error-r: #fcc;
   --ti-color-track: #888;
+  --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
   --ti-color-disable: #999;
+  --ti-color-disable-b: #adadad;
   --ti-color-disable-r: #ccc;
-  --ti-color-text: #080;
+  --ti-color-text: #008800;
+  --ti-color-text-b: #0f9c0f;
   --ti-color-text-r: #fff;
-  --ti-color-number: #08f;
+  --ti-color-number: #0088ff;
+  --ti-color-number-b: #2788dd;
   --ti-color-number-r: #fff;
 }
