--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -54,7 +54,7 @@
   --ti-color-track-r: #fff;
   --ti-color-disable: #999;
   --ti-color-disable-b: #adadad;
-  --ti-color-disable-r: #ccc;
+  --ti-color-disable-r: #e5e5e5;
   --ti-color-text: #008800;
   --ti-color-text-b: #0f9c0f;
   --ti-color-text-r: #fff;
