--- a/src/lib/input/box/ti-input-box.scss
+++ b/src/lib/input/box/ti-input-box.scss
@@ -14,7 +14,7 @@ div.ti-input-box {
       padding: var(--ti-measure-box-pad);
       background-color: transparent;
       &[readonly] {
-        font-style: italic;
+        //font-style: italic;
         cursor: default;
       }
     }
