--- a/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
+++ b/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
@@ -1,7 +1,14 @@
 .ti-grid-fields {
+  @include flex-align-v-nowrap;
   width: 100%;
   height: 100%;
   overflow: auto;
+  //-------------------------------------------------------------
+  > .part-empty-tip {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
   //-------------------------------------------------------------
   > .part-title {
     display: block;
@@ -12,6 +19,7 @@
   }
   //-------------------------------------------------------------
   > .part-body {
+    flex: 1 1 auto;
     display: grid;
     grid-auto-rows: auto;
     justify-content: stretch;
