--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -51,6 +51,7 @@ input::placeholder {
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--ti-color-primary);
 }
+//...................................................
 
 html.tight {
   @include use_measure_tight;
