--- a/src/lib/input/transfer/ti-transfer.scss
+++ b/src/lib/input/transfer/ti-transfer.scss
@@ -7,35 +7,57 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr 100px 1fr;
+    grid-template-columns: 1fr 80px 1fr;
     grid-template-rows: 1fr;
     gap: var(--ti-gap-s);
+    padding: var(--ti-gap-s);
     background-color: var(--ti-color-body);
     grid-template-areas: 'can-list  actions   sel-list';
-    > div {
-      &.part-filter {
-        grid-area: filter;
+    > div.part-list {
+      background-color: var(--ti-color-card);
+      border-radius: var(--ti-measure-r-s);
+      overflow: hidden;
+      &.as-can {
+        grid-area: can-list;
       }
-
-      &.part-list {
-        background-color: var(--ti-color-card);
+      &.as-sel {
+        grid-area: sel-list;
+      }
+      .transfer-filter {
+        padding: var(--ti-gap-m);
+        border-bottom: 1px solid var(--ti-color-border-shallow);
+      }
+    }
+    > div.part-actions {
+      @include flex-center;
+      grid-area: actions;
+      padding: var(--ti-gap-b);
+      > a {
+        @include flex-center;
+        width: 100%;
+        height: SZ(32);
         border-radius: var(--ti-measure-r-s);
-        overflow: hidden;
-        &.as-can {
-          grid-area: can-list;
+        margin: SZ(10) 0;
+        //...................................................
+        &:hover {
+          text-decoration: none;
         }
-        &.as-sel {
-          grid-area: sel-list;
+        //...................................................
+        &.is-enabled {
+          background-color: var(--ti-color-primary);
+          color: var(--ti-color-primary-r);
+          &:hover {
+            background-color: var(--ti-color-secondary);
+            color: var(--ti-color-secondary-r);
+          }
         }
-      }
-      &.part-pager {
-        grid-area: pager;
-      }
-      &.part-actions {
-        grid-area: actions;
-      }
-      &.part-menu {
-        grid-area: menu;
+        //...................................................
+        &.is-disabled {
+          cursor: default;
+          background-color: var(--ti-color-disable-r);
+          color: var(--ti-color-disable);
+        }
+        //...................................................
       }
     }
   }
