--- a/src/lib/view/list/ti-list.scss
+++ b/src/lib/view/list/ti-list.scss
@@ -15,6 +15,12 @@
     }
   }
   //--------------------------------
+  > .empty-tip {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  //--------------------------------
   > main {
     > .list-item {
       display: grid;
